<resources>
    <string name="app_name">Logbook</string>
    <string name="fab_record">record ride</string>
    <string name="fab_add">add ride</string>
    <string name="editText_startAddress">start address</string>
    <string name="editText_destinationAddress">destination address</string>
    <string name="textView_distance">distance</string>
    <string name="textView_mileageStart">mileage at driving off</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_introduction">Introduction</string>
    <string name="menu_impressum">Impressum</string>
    <string name="menu_overview">Overview</string>
    <string name="manu_drawer_open">Open naviagtion drawer</string>
    <string name="menu_drawer_close">Close naviagtion drawer</string>
    <string name="channel_description">Complete the entry</string>
    <string name="editText_purpose">purpose of the journey</string>
    <string name="textView_duration">duration of the journey</string>
    <string name="menu_save">save</string>
    <string name="menu_addDrive">add journey</string>
    <string name="EditText_startTime">departure</string>
    <string name="button_recStart">start</string>
    <string name="button_recEnd">finish</string>
    <string name="menu_rec">ride record</string>
    <string name="textView_noEntry">no entry!</string>
    <string name="editText_endTime">arrival</string>
    <string name="textView_category">category</string>
    <string name="menu_share">share</string>
    <string name="email_subject">", status from "</string>
    <string name="email_description">choose an email client</string>
    <string name="category_0">" no category"</string>
    <string name="category_1">" private"</string>
    <string name="category_2">" work"</string>
    <string name="category_3">" way to work"</string>
    <string name="category">category</string>
    <string name="title_activity_details_drive">details</string>
    <string name="email_text">all entrys:</string>
    <string name="email_purpose">purpose of the ride:</string>
    <string name="email_startAddress">start address:</string>
    <string name="menu_edit">edit</string>
    <string name="menu_details">details</string>
    <string name="toast_notFound">entry not found</string>
    <string name="textView_notificationIntervalDescription">repeat</string>
    <string name="alertDialog_titleSettings">explanation</string>
    <string name="alertDialog_messageNotification">Hier kannst du einstellen in welchen Abständen du eine
        Benachrichtigung bekommen möchtest um die Fahrten in dein <i>richtiges</i> Fahrtenbuch einzutragen.
    </string>
    <string name="switch_purpose">purpose ofthe journey required</string>
    <string name="alertDialog_messagePurpose">Hier kannst du festlegen ob du benachrichtigt werden willst wenn kein
        Grund für die Fahrt angegeben wurde.
    </string>
    <string name="textView_titleNotification">Notification</string>
    <string name="textView_titleLayout">Layout</string>
    <string name="button_setDefault">reset to default</string>
    <string name="alertDialog_messageLayout">Hier kannst du festlegen welche Informationen über die Fahrten in der Übersichtsliste angezeigt werde. Auf der Abbildung siehst du vier Platzhalter darunter kannst du festlegen welcher Platzhalter welche Informationen zugewiesen werden.</string>
    <string-array name="spinner_notificationInterval">
        <item>every day</item>
        <item>once a week</item>
        <item>once a month</item>
        <item>never</item>
    </string-array>
    <string-array name="spinner_layout">
        <item>purpose of ride</item>
        <item>duration</item>
        <item>start time</item>
        <item>end time</item>
        <item>mileage at start</item>
        <item>milage at destination</item>
        <item>start address</item>
        <item>destination address</item>
        <item>distance</item>
    </string-array>
    <string name="title_settings">Settings</string>
    <string name="toast_saveSettings">save settings</string>
    <string name="email_destinationAddress">destination address:</string>
    <string name="email_mileageStart">milage at drive off:</string>
    <string name="email_mileageDestination">mileage at destination:</string>
    <string name="email_startTimestamp">start timestamp:</string>
    <string name="email_destinationTimestamp">timestamp at destination:</string>
    <string name="email_duration">duration of journey:</string>
    <string name="toast_settingsReset">settings reset</string>
    <string name="textView_mileageEnd">mileage at destination</string>
    <string name="alertDialog_emailTitle">Export entries to email</string>
    <string-array name="dialog_email_choice">
        <item>as list</item>
        <item>as table (easy to paste in excel)</item>
    </string-array>
    <string name="editText_timeHour">hour</string>
    <string name="editText_timeMinute">minute</string>
    <string name="toast_minute">minute is not valid</string>
    <string name="toast_hour">hour is not valid</string>
    <string name="toast_startAddress">start address is missing</string>
    <string name="toast_destinationAddress">destination address is missing</string>
    <string name="toast_mileage">mileage is incorrect</string>
    <string name="toast_time">time is incorrect</string>
    <string name="toast_addSuccessfully">Add was successful</string>
    <string name="alertDialog_titleAddDrive">hint</string>
    <string name="snackbar_button">undo</string>
    <string name="snackbar_text">Entry deleted.</string>
    <string name="menu_delete">delete all before ...</string>
    <string name="distance_unit" translatable="false">" km"</string>
    <string name="textView_titleDelete">Delete</string>
    <string name="switch_delete">delete changes newer entries</string>
    <string name="alertDialog_messageDelete">Hier kannst du bestimmen ob wenn ein einzelner Eiontrag gelöscht wird die
        KIlometerstände der neueren Einträge um die Entfernung des gelöschten EIntrags angepasst werden soll. (Das macht
        SInn wenn die meisten deiner Fahrten automatisch aufgezeichnet werden)
    </string>
    <string-array name="spinner_day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="title_introduction">Introduction</string>
    <string name="textView_title">Wilkommen</string>
    <string name="textView_titleDescription">Diese App hilft dir beim führen deines Fahrtenbuches. Um dir den Einstieg
        zu erleichtern wird dir im folgenden Text die grundfunktionalität der App erklärt.
    </string>
    <string name="textView_titleNavigation">Navigation</string>
    <string name="textView_navigationDescription">Wenn du von links nach rechts streichst oder auf ☰ drückst öffnet sich
        die Navigation
    </string>
    <string name="textView_titleDrive">Fahrt erfassen</string>
    <string name="textView_driveDescription">Um eine Fahrt aufzuzeichnen drückst du in der rechten unteren Ecke auf das
        + Symbol. Danach kannst du eine Fahrt aufzeichnen oder hinzufügen.
    </string>
    <string name="textView_TitleRecordDrive">record ride</string>
    <string name="textView_recordDriveDescription">Beim aufzeichnen drückst du einen start Knopf. Nun wird deine
        GPS-Position erfasst bis du auf den Stop Knopf drückst.
    </string>
    <string name="textView_titleAddDrive">Fahrt hinzufügen</string>
    <string name="textView_addDriveDescription">Beim Hinzufügen kannst du eine Fahrt nachträglich per Hand hinzufügen.
    </string>
    <string name="textView_deleteDescription">Du kannst einzelnene Einträge löschen oder alle Einträge vor einem
        bestimmten Zeitpunkt.
    </string>
    <string name="textView_titleDeleteSingle">einzelne Einträge löschen</string>
    <string name="textView_deleteSingleDescription">Bei der Übersicht kannst du in der Liste einzelne Einträge nach
        links oder rechts streichen um diese zu löschen. Danach hast du noch kurze Zeit die möglichkeit das Löschen
        rückgängig zu machen.
    </string>
    <string name="textView_titleDeleteFew">mehere Einträge löschen</string>
    <string name="textView_deleteFewDescription">
        Wenn du rechts oben auf den Papierkorb drückst öffnet sich ein Dialog indem du ein Datum auswählen kannst. Alle
        Einträge die vor diesem Datum erstellt wurden erden dann <i>uwiderruflich</i> gelöscht.
    </string>
    <string name="title_impressum">Imprint</string>
    <string name="textView_titleExport">expotieren</string>
    <string name="textView_exportDescription">Du kannst dein digitales Fahrtenbuch als Email expotieren, um es dir, zum
        leichteren Übertragen, auf deinem PC anzuschauen. Dazu musst du rechts oben auf den SHARE-Button drücken. Danach
        kannst du auswählen wie die Nachricht
        formatiert werden soll, als Liste oder Tabelle. Die Tabellenformatierung ist nur zum einfachen Einfügen in einem
        Tabellenkalkulationsprogramm wie Excel gedacht.
    </string>
    <string name="textView_rec">Position is recorded</string>
    <string name="toast_recDriveStop">Data is processed.</string>
    <string name="textView_dayDescription">day</string>
    <string name="textView_bluetoothDescription">name of the connected device</string>
    <string name="switch_bluetooth">autostart by bluetooth connection</string>
    <string name="alertDialog_messageBluetooth">Hier kannst du bestimmen ob die App bei eine Bluetoothverbindung
        automatisch die Aufzeichnung einer Fahrt beginnen soll und diese auch beenden soll wenn die Verbindung beendet
        wird. Solltest du dich für ja entscheiden kannst du im nächsten Schritt den Namen dieser Verbindung auswählen.
    </string>
    <string name="textView_bluetooth">In den EInstellungen kannst du festlegen ob die App automatisch beginnen soll eine
        Fahrt aufzuzeichnen wenn eine BluetoothVerbindung zu einem bestimmten Gerät aufgabeut wird und diese auch wieder
        beenden soll wie die Bluetoothverbindung abbricht. Um den Namen des Bluetoothgerätes in den EInstellungen
        auswählen zu können muss Bluetooth aktiviert sein und dein Handy schonmal mit dem Gerät verbunden sein.
    </string>
    <string name="textView_titleBluetooth" translatable="false">Bluetooth</string>
    <string name="textView_correctMileage">correct mileage</string>
    <string name="toast_incorrectMileage">mileage is incorrect</string>
    <string name="category_4">correct mileage</string>
    <string name="hint_mileage">new mileage</string>
    <string name="notification_gps_title" translatable="false">GPS</string>
    <string name="notification_gps_text">Ride is recorded.</string>
    <string name="alertDialog_messageEnableBluetooth">Bluetooth has been disabled. This is necessary to change the bluetooth settings. When you leave the settings bluetooth will be disabled.</string>
    <string name="toast_bluetoothDisabled">Bluetooth disabled</string>
    <string name="toast_locationError">Not enough location information to save the ride.</string>
    <string name="toast_bluetoothEnabled">Bluetooth enabled</string>
    <string name="explanationDeleteAll">In the next dialog you can select a date. All entries created before this date will be deleted irrevocably.</string>
    <string name="title_deleteAll">Delete</string>
</resources>