<?xml version="1.0" encoding="utf-8"?>
<tools:menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_overview"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/menu_overview"/>
        <item android:id="@+id/nav_settings"
              android:icon="@drawable/ic_settings"
              android:title="@string/menu_settings"/>
        <item android:id="@+id/nav_introduction"
              android:icon="@drawable/ic_help"
              android:title="@string/menu_introduction"/>
        <item android:id="@+id/nav_impessum"
              android:title="@string/menu_impressum"/>
    </group>
</tools:menu>