<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.IntroductionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/textView_title"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/textView_titleDescription"
        />

        <TextView
                android:text="@string/textView_titleDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView_description"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_titleDescription"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
        />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView_titleNavigation"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_description"
                android:textSize="24sp"
                android:textColor="@color/dark"
                android:text="@string/textView_titleNavigation"
        />

        <TextView
                android:text="@string/textView_navigationDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView_navigationDescription"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_titleNavigation"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
        />

        <TextView
                android:text="@string/textView_titleDrive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView_titleDrive"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_navigationDescription"
                android:textSize="24sp"
                android:textColor="@color/dark"
        />

        <TextView
                android:text="@string/textView_driveDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView_driveDescription"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_titleDrive"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
        />

        <TextView
                android:text="@string/textView_TitleRecordDrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_TitleRecordDrive"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_driveDescription"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:textColor="@color/dark"
        />

        <TextView
                android:text="@string/textView_recordDriveDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView_recordDriveDescription"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_TitleRecordDrive"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
        />

        <TextView
                android:text="@string/textView_titleAddDrive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView_titleAddDrive"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_recordDriveDescription"
                android:textSize="18sp"
                android:textColor="@color/dark"
        />

        <TextView
                android:text="@string/textView_addDriveDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView_addDriveDescription"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_titleAddDrive"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
        />

        <TextView
                android:text="@string/textView_titleDelete"
                android:layout_height="wrap_content"
                android:id="@+id/textView_titleDelete"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_addDriveDescription"
                android:textSize="24sp"
                android:textColor="@color/dark"
                android:layout_width="wrap_content"/>

        <TextView
                android:text="@string/textView_deleteDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView_titleDelete"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:id="@+id/textView_deleteDescription"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
        />

        <TextView
                android:id="@+id/textView_titleDeleteSingle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView_deleteDescription"
                android:text="@string/textView_titleDeleteSingle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/dark"
                android:textSize="18sp"
        />

        <TextView
                android:id="@+id/textView_deleteSingleDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView_titleDeleteSingle"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/textView_deleteSingleDescription"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        />

        <TextView
                android:id="@+id/textView_titleDeleteFew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView_deleteSingleDescription"
                android:text="@string/textView_titleDeleteFew"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/dark"
                android:textSize="18sp"
        />

        <TextView
                android:id="@+id/textView_deleteFewDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView_titleDeleteFew"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:text="@string/textView_deleteFewDescription"
        />

        <TextView
                android:id="@+id/textView_titleExport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView_deleteFewDescription"
                android:text="@string/textView_titleExport"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:textColor="@color/dark"
                android:textSize="24sp"
        />

        <TextView
                android:id="@+id/textView_exportDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView_titleExport"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:text="@string/textView_exportDescription"
        />

        <TextView
                android:text="@string/textView_bluetooth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView_bluetoothDescription"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_titleBluetooth"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:text="@string/textView_titleBluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_titleBluetooth"
                app:layout_constraintTop_toBottomOf="@id/textView_exportDescription"
                android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:textSize="24sp" android:textColor="@color/dark"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>