<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <EditText
            android:id="@+id/edit_text_start_address"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:hint="@string/editText_startAddress"/>

    <EditText
            android:id="@+id/edit_text_destination_address"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:hint="@string/editText_destinationAddress" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edit_text_start_address"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_distance"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_destination_address"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" android:id="@+id/textView2"/>

    <NumberPicker
            android:id="@+id/number_picker_mileageStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_mileageStart"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_destination_address"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:id="@+id/textView"/>

    <NumberPicker
            android:id="@+id/number_picker_odometer"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

</androidx.constraintlayout.widget.ConstraintLayout>