<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

    <TextView
            android:id="@+id/textView_noEntry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/textView_noEntry"
            android:textSize="30sp"
            android:textAlignment="center"

            android:layout_marginTop="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/ride_item"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_show"
            android:src="@drawable/ic_add_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:onClick="onClickFabShow"/>

    <TextView
            android:id="@+id/textView_fab_add_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="86dp"
            android:layout_marginEnd="66dp"
            android:text="@string/fab_add"
            android:background="@drawable/rounded_view"
            android:textColor="@color/colorAccent"
            android:padding="3dp"
            android:visibility="gone"
    />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:src="@drawable/ic_create_white_24dp"
            app:fabSize="mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="86dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            android:onClick="onClickFabAdd"/>


    <TextView
            android:id="@+id/textView_fab_record_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="136dp"
            android:layout_marginEnd="66dp"
            android:text="@string/fab_record"
            android:background="@drawable/rounded_view"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            android:padding="5dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_record"
            android:src="@drawable/ic_location_on_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            app:fabSize="mini"
            android:onClick="onClickFabRec"
            android:layout_marginBottom="136dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
    />

    <TextView
            android:id="@+id/textView_fab_correctMileage_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="186dp"
            android:background="@drawable/rounded_view"
            android:textColor="@color/colorAccent"
            android:padding="5dp"
            android:layout_marginEnd="66dp"
            android:visibility="gone"
            android:text="@string/textView_correctMileage"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:onClick="onClickFabCorrect"
            android:id="@+id/fab_correctMileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            app:fabSize="mini"
            android:layout_marginBottom="186dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            android:src="@drawable/ic_correct"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>